<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/topBars"
        layout="@layout/top_bar_floating" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/box_back"
        android:padding="@dimen/large_padding" >

        <EditText
            android:id="@+id/edttext_OldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@drawable/shape_rectangle_dark"
            android:gravity="center_vertical"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/large_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/large_padding"
            android:singleLine="true"
            android:textColor="@color/text_color_fadedgreen"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/text_color_grey"
            android:textSize="@dimen/text_size_tweleve" />

        <EditText
            android:id="@+id/edttext_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@drawable/shape_rectangle_dark"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/large_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/large_padding"
            android:singleLine="true"
            android:textColor="@color/text_color_fadedgreen"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/text_color_grey"
            android:textSize="@dimen/text_size_tweleve" />

        <EditText
            android:id="@+id/edttext_ReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@drawable/shape_rectangle_dark"
            android:gravity="center_vertical"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/large_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingTop="@dimen/large_padding"
            android:singleLine="true"
            android:textColor="@color/text_color_fadedgreen"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/text_color_grey"
            android:textSize="@dimen/text_size_tweleve" />

        <TextView
            android:id="@+id/txtView_SavepasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_margin_twenty"
            android:background="@drawable/selector_save_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@drawable/text_color"
            android:textSize="@dimen/text_size_fifteen"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>